# pink-cut

./: .gitignore  AGENTS.md  skills-lock.json
.agents/skills/claude-automation-recommender/references/: mcp-servers.md
app/: .gitignore  README.md  index.html  package.json  tsconfig.app.json  vite.config.ts
app/src/: App.tsx  index.css
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  model_manager.rs  transcription.rs
app/src/components/layout/: app-shell.tsx  footer.tsx  header.tsx
app/src/dev/: demo-seed.ts
app/src/features/editor/: README.md  editor-surface.tsx  index.ts  transcript-view.tsx  transcription-progress.tsx
app/src/features/media/: README.md  index.ts  types.ts  upload-video-form.tsx  use-pick-video-file.ts
app/src/features/project/: README.md  assets-sidebar.tsx  format.ts  index.ts
app/src/features/transcription/: README.md  index.ts  silence-policy.ts  transcribe.ts  types.ts  use-model-status.ts  use-transcription.ts
app/src/lib/: project-context.tsx
assets/test-videos/: README.md  manifest.txt
assets/test-videos/scripts/: generate.sh
docs/: asr-model-decision.md  studygram_notebook_css_demo.html  technology-comparison.md  video-use-skill.md
inspirations/: references.md
pink-cut/docs/: architecture.md
